working on nav bar fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,6 +12,10 @@
     margin: 0;
     font-size: 25px;
 }
+#nav-bar-items{
+    display: flex;
+    flex-wrap: wrap;
+}
 
 h1 {
     display: flex;
