--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,16 +12,20 @@
     margin: 0;
     font-size: 25px;
 }
-#nav-bar-items{
+
+#nav-bar-items {
     display: flex;
     flex-wrap: wrap;
+
 }
+
 
 h1 {
     display: flex;
     justify-content: center;
     margin: 0 0 15px 0;
 }
+
 #side-bar {
     border: 2px solid red;
     margin-top: 36px;
@@ -42,35 +46,41 @@ h2 {
 }
 
 .main-btns {
+
     width: 15%;
     margin: 10px;
 
 }
 
-#search-area  {
-    margin-bottom: 20px;
-    
+.nav-wrapper {
+    padding-left: 25%;
+    display: flex;
+    align-items: end;
+
 }
 
-#search {
-    margin-left: 45px;
-    
-}
+
+
 
 .nav-content {
     display: flex;
-    align-items: center; 
+    justify-content: center;
+    justify-content: space-around;
+
 }
 
 .tabs {
-    flex: 1; 
+    flex: 1;
 }
 
+
+
+
 .input-field {
-    margin-left: 10px; 
+    margin-left: 10px;
 }
+
 
 #game-area {
     border: 2px solid red;
 }
-
