--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,5 @@
+
+
 body {
     background-color: #6e61ab;
     height: 1000px;
@@ -106,3 +108,13 @@ h2 {
     /*border-bottom: solid gray 2px;*/
 }
 
+
+
+#preloader {
+    background: #000 url(./loader.gif) no-repeat center center;
+    background-size: 100%;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+}
