--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,7 @@
 body {
     background-color: #6e61ab;
     height: 1000px;
+    /* background-image: url('/assets/photos/nfl.jpg'); */
 }
 
 nav {
@@ -108,13 +109,7 @@ h2 {
     /*border-bottom: solid gray 2px;*/
 }
 
-
-
-#preloader {
-    background: #000 url(./loader.gif) no-repeat center center;
-    background-size: 100%;
-    height: 100vh;
-    width: 100%;
-    position: fixed;
-    z-index: 100;
+.glide__slides {
+    height: 100px;
+    /* max-width: 25%; */
 }
