--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,4 @@
 
-
 body {
     background-color: #6e61ab;
     height: 1000px;
@@ -148,7 +147,7 @@ h2 {
 
 #game-area {
     border: 2px solid gray;
-    height: 700px;
+    height: 688px;
 }
 
 #search-area div {
@@ -186,4 +185,8 @@ h2 {
     background-position: 50% 40%;
     filter: opacity(70%);
 
+}
+
+footer {
+    max-height: 20px;
 }
