--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,9 +2,6 @@
 body {
     background-color:  #00637C;
     height: 1000px;
-    /* background-image: url('./odds\ background.jpg'); */
-    
-
 }
 
 nav.navbar {
@@ -52,7 +49,7 @@ h1 {
 
 #side-bar {
     border: 2px solid gray;
-    margin-top: 84px;
+    margin-top: 46px;
     height: 725px;
     
 }
@@ -187,4 +184,32 @@ h1 {
 footer {
     max-height: 20px;
     margin-top: 60px;
+}
+
+@media (max-width: 768px) {
+    #side-bar {
+        height: 100px; 
+        overflow: hidden; 
+        transition: height 0.3s ease; 
+    }
+
+    footer {
+        margin-top: 665px;
+    }
+
+    #game-area {
+        background-size:contain;
+        background-position: 50% 40%;
+        
+    }
+
+    #main-area {
+        color: white;
+
+    }
+
+    #team-1 {
+        margin-top: 75px
+    }
+    
 }
