append the content when pressing all to the right location

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -186,6 +186,12 @@ footer {
     margin-top: 5%;
 }
 
+.game {
+    background-color: white;
+    text-align: center;
+    width: 100%;
+}
+
 @media (max-width: 768px) {
     #side-bar {
         height: 100px; 
