--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,8 @@
+html {
+    background-color: #00637C;
 
-body {
-    background-color:  #00637C;
-    height: 1000px;
 }
+
 
 nav.navbar {
     background-color: #aab1e5;
@@ -16,7 +16,7 @@ nav.navbar {
 
 .navbar-item img {
     max-height: 70px;
-    width: 100px;
+    width: 100%;
 }
 
 .preloader {
@@ -31,7 +31,7 @@ nav.navbar {
 }
 
 #gif {
-width: 100%;
+    width: 100%;
 }
 
 .hidden {
@@ -50,8 +50,7 @@ h1 {
 #side-bar {
     border: 2px solid gray;
     margin-top: 46px;
-    height: 725px;
-    
+ 
 }
 
 #side-bar-btns {
@@ -64,21 +63,22 @@ h1 {
 
 #search-btn:hover {
     border-radius: 0px;
-    
-		color: var(--feedback-primary-color);
-		background-color: var(--background-color);
-		background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffacac' fill-opacity='0.4'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-		animation: animatedBackground .5s linear infinite alternate;
-	}
+
+    color: var(--feedback-primary-color);
+    background-color: var(--background-color);
+    background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffacac' fill-opacity='0.4'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    animation: animatedBackground .5s linear infinite alternate;
+}
 
 
 @keyframes animatedBackground {
-	from {
-		background-position: 0 0;
-	}
-	to {
-		background-position: 100% 0;
-	}
+    from {
+        background-position: 0 0;
+    }
+
+    to {
+        background-position: 100% 0;
+    }
 }
 
 
@@ -114,21 +114,22 @@ h1 {
 
 .top-btns:hover {
     border-radius: 0px;
-    
-		color: var(--feedback-primary-color);
-		background-color: var(--background-color);
-		background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffacac' fill-opacity='0.4'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-		animation: animatedBackground 5s linear infinite alternate;
-	}
+
+    color: var(--feedback-primary-color);
+    background-color: var(--background-color);
+    background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffacac' fill-opacity='0.4'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    animation: animatedBackground 5s linear infinite alternate;
+}
 
 
 @keyframes animatedBackground {
-	from {
-		background-position: 0 0;
-	}
-	to {
-		background-position: 100% 0;
-	}
+    from {
+        background-position: 0 0;
+    }
+
+    to {
+        background-position: 100% 0;
+    }
 }
 
 .row {
@@ -153,23 +154,23 @@ h1 {
     font-size: 20px;
 }
 
-#game-area > .columns:first-child {
+#game-area>.columns:first-child {
     border-bottom: solid gray 2px;
 }
 
 #spread {
     margin-right: -70px;
-    /*border-bottom: solid gray 2px;*/
+    
 }
 
 #teams-line {
     margin-left: 10px;
-    /*border-bottom: solid gray 2px;*/
+   
 }
 
 .glide__slides {
     height: 100px;
-    /* max-width: 25%; */
+    
 }
 
 #game-area {
@@ -178,12 +179,11 @@ h1 {
     background-size: auto;
     background-position: 50% 40%;
     filter: opacity(70%);
-
 }
 
 footer {
-    height: 5%;
-    margin-top: 5%;
+    height: 3%;
+    margin-top: 60%;
 }
 
 .game {
@@ -193,49 +193,13 @@ footer {
 }
 
 @media (max-width: 768px) {
-    #side-bar {
-        height: 100px; 
-        overflow: hidden; 
-        transition: height 0.3s ease; 
-    }
-
     footer {
         margin-top: 665px;
     }
+}
 
-    #game-area {
-        background-size:contain;
-        background-position: 50% 40%;
-        
-    }
-
-    #main-area {
-        color: black;
-
-    }
-
-    #team-1 {
-        margin-top: 75px;
-        background-color: white
-    }
-    #team-2 {
-        margin-top: 75px;
-        background-color: white
-    }
-    
-    #odds-for-team-1 {
-        width: 75px;
-        background-color: white
-    }
-
-    #odds-for-team-2 {
-        width: 75px;
-        background-color: white
-    }
-    #teams-line {
-        width: 30%;
-    }
-    #spread {
-        width: 0px;
+@media (max-width: 1050px) {
+    footer {
+        margin-top: 665px;
     }
 }
