--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -142,7 +142,9 @@ h1 {
 
 #game-area {
     border: 2px solid gray;
-    height: 688px;
+    height: 680px;
+    overflow: hidden;
+    overflow-y: scroll;
 }
 
 #search-area div {
